# Gnome-todo

./: .gitignore  AUTHORS  Makefile.am  NEWS  autogen.sh  configure.ac  configure_meson  meson.build  meson_options.txt  org.gnome.Todo.json
data/: Makefile.am  meson.build  org.gnome.Todo.Autostart.desktop.in  org.gnome.Todo.desktop.in  org.gnome.Todo.desktop.in.in  org.gnome.todo.gschema.xml  todo.gresource.xml
data/appdata/: meson.build  org.gnome.Todo.appdata.xml.in
data/icons/: meson.build  meson_post_install.py
data/theme/: Adwaita.css
data/ui/: dnd-row.ui  edit-pane.ui  empty-list.ui  initial-setup.ui  list-selector-panel.ui  list-view.ui  new-task-row.ui  plugin-dialog.ui  provider-popover.ui  task-row.ui  window.ui
doc/reference/: Makefile.am  gnome-todo-docs.sgml  gnome-todo-sections.txt  gnome-todo.types  meson.build
doc/reference/xml/: gtkdocentities.ent.in  meson.build
plugins/: Makefile.am  meson.build
plugins/background/: Makefile.am  background.plugin.in  gtd-plugin-background.c  gtd-plugin-background.h  meson.build
plugins/background/ui/: preferences.ui
plugins/dark-theme/: Makefile.am  dark-theme.plugin.in  gtd-plugin-dark-theme.c  gtd-plugin-dark-theme.h  meson.build
plugins/eds/: Makefile.am  gtd-panel-scheduled.c  gtd-panel-today.c  gtd-plugin-eds.c  gtd-provider-eds.c  gtd-provider-eds.h  gtd-provider-goa.c  gtd-provider-goa.h  gtd-provider-local.c  meson.build
plugins/scheduled-panel/: Makefile.am  gtd-panel-scheduled.c  gtd-plugin-scheduled-panel.c  gtd-plugin-scheduled-panel.h  meson.build  scheduled-panel.plugin.in
plugins/scheduled-panel/theme/: Adwaita.css
plugins/score/: Makefile.am  meson.build
plugins/today-panel/: Makefile.am  gtd-panel-today.c  gtd-plugin-today-panel.c  gtd-plugin-today-panel.h  meson.build  today-panel.plugin.in
plugins/todo-txt/: Makefile.am  gtd-plugin-todo-txt.c  gtd-plugin-todo-txt.h  gtd-provider-todo-txt.c  gtd-provider-todo-txt.h  gtd-todo-txt-parser.c  gtd-todo-txt-parser.h  meson.build  org.gnome.todo.txt.gschema.xml  todo-txt.plugin.in
plugins/todoist/: Makefile.am  gtd-plugin-todoist.c  gtd-plugin-todoist.h  gtd-provider-todoist.c  gtd-provider-todoist.h  gtd-todoist-preferences-panel.c  gtd-todoist-preferences-panel.h  meson.build  todoist.plugin.in
plugins/todoist/ui/: preferences.ui
plugins/unscheduled-panel/: Makefile.am  meson.build
plugins/unscheduled-panel/unscheduled-panel/: __init__.py
po/: LINGUAS  Makevars  POTFILES.in  be.po  ca.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  hu.po  id.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  nb.po  nl.po  oc.po  pl.po  pt_BR.po  ru.po  sk.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
src/: Makefile.am  gtd-application.c  gtd-dnd-row.c  gtd-dnd-row.h  gtd-edit-pane.c  gtd-empty-list-widget.c  gtd-empty-list-widget.h  gtd-new-task-row.c  gtd-new-task-row.h  gtd-object.c  gtd-plugin-dialog.c  gtd-task-list-view.c  gtd-task-list-view.h  gtd-task-list.c  gtd-task-list.h  gtd-task-row.c  gtd-task-row.h  gtd-task.c  gtd-task.h  gtd-timer.c  gtd-timer.h  gtd-types.h  gtd-window.c  meson.build
src/engine/: gtd-manager.c  gtd-manager.h
src/interfaces/: gtd-activatable.c  gtd-panel.c  gtd-provider.c  gtd-provider.h
src/notification/: gtd-notification-widget.c  gtd-notification.c
src/provider/: gtd-provider-row.c  gtd-provider-selector.c
src/views/: gtd-list-selector-grid-item.c  gtd-list-selector-list.c  gtd-list-selector-panel.c
