SUBDIRS = eds

if BUILD_DARK_THEME_PLUGIN
SUBDIRS += dark-theme
endif

if BUILD_SCHEDULED_PANEL_PLUGIN
SUBDIRS += scheduled-panel
endif

if BUILD_SCORE_PLUGIN
SUBDIRS += score
endif

if BUILD_TODAY_PANEL_PLUGIN
SUBDIRS += today-panel
endif

if BUILD_UNSCHEDULED_PANEL_PLUGIN
SUBDIRS += unscheduled-panel
endif


MAINTAINERCLEANFILES = Makefile.in
